--- a/app/src/main/res/layout/content_temperature.xml
+++ b/app/src/main/res/layout/content_temperature.xml
@@ -11,6 +11,10 @@
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/temperatureChart"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp"/>
 
 </RelativeLayout>
